--- a/src/assets/partials/script.html
+++ b/src/assets/partials/script.html
@@ -1,5 +1,5 @@
 
-<script src="assets/js/swiper.min.js"></script>
-<script src="assets/js/validate.min.js"></script>
-<script src="assets/js/inputmask.min.js"></script>
-<script src="assets/js/main.min.js"></script>
+<script src="assets/js/swiper.js"></script>
+<script src="assets/js/validate.js"></script>
+<script src="assets/js/inputmask.js"></script>
+<script src="assets/js/main.js"></script>
